# axelar-examples

./: .env  .env.example  .eslintrc  .gitignore  .mocharc.js  .prettierrc  .solhint.json  CONTRIBUTING.md  LICENSE  README.md  build-aptos.sh  build-multiversx.sh  build-wasm.sh  chain-testnet.json  chain1.json  chain2.json  hardhat.config.js  latestTask-xrpl-evm-sidechain.json  package-lock.json  package.json  secret.sample.json  slither.config.json  waffle-config.json  waffle.json
.github/workflows/: local-example-tests.yaml  tests.yaml  verify-cli-examples.yaml  verify-web-examples.yaml
advanced-examples/call-contract/: index.js
advanced-examples/call-contract-with-token/: index.js
advanced-examples/deposit-address/: depositAddress.js
advanced-examples/general-message-passing/: ExecutableSample.sol
advanced-examples/headers/: Headers.sol  README.md  headers.js
advanced-examples/metamask/: chain2.json  createNetworks.js  index.html  main.js
advanced-examples/nft-linker/: NftLinker.sol  README.md  index.js
advanced-examples/remote/: README.md
advanced-examples/send-token/: index.js
advanced-examples/testnet/: ExecutableSample.sol  README.md  chains.json  createLocal.js  deploy.js  test.js  testnet.js  waffle.json
advanced-examples/token-linker/: MirroredTokenLinker.sol  SourceTokenLinker.sol  TokenLinker.sol
chain-config/: mainnet.json  testnet.json
config/: ci.json  default.json  index.js
examples/: Proxy.sol  deploy-local.js  env.js  network.js  send-token.js  start-local.js
examples-web/: .eslintrc.json  .gitignore  README.md  hardhat.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
examples-web/call-contract-with-token/: .env.example  .gitignore  README.md  package-lock.json  package.json  (+1 more)
examples/cosmos/call-contract/wasm-contract/: Cargo.toml  README.md
examples/cosmos/call-contract/wasm-contract/artifacts/: send_receive.wasm
examples/cosmos/call-contract/wasm-contract/src/: contract.rs  lib.rs  msg.rs  state.rs  unit_tests.rs
examples/multiversx/call-contract/hello-world/wasm/: Cargo.toml
examples/multiversx/call-contract/hello-world/wasm/src/: lib.rs
examples/near/call-contract/contracts/near-axelar-contract-call-example/: Cargo.toml  README.md  build.sh  deploy.sh
examples/near/call-contract/contracts/near-axelar-contract-call-example/src/: executable.rs  external.rs  lib.rs  utils.rs
info/: local.json  localWETH.json  testnet.json  testnetWETH.json
scripts/: checkBalances.js  createLocal.js  createPrivateKey.js  deploy.js  execute.js  gasCosts.js  runCheckBalance.js  runCreatePrivateKey.js  runDeploy.js  runExecute.js  runStart.js  start.js  test.js  utils.js
src/: call-contract-with-token.js  send-token.js
test/: local-examples.js  test.js
utils/: index.js
(+492 files in other folders)
