[package]
name = "send-receive"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.2.5"
cosmwasm-std = "1.1.3"
cosmwasm-storage = "1.1.3"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
ethabi = { version = "18.0.0", default-features = false, features = [] }
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
serde-json-wasm = "0.5.1"
prost = {version = "0.11.9", default-features = false, features = ["prost-derive"]}
osmosis-std-derive = "0.15.2"
osmosis-std = "0.15.2"
cw-utils = "1.0.1"

[dev-dependencies]
cw-multi-test = "0.16.2"
